--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
